--- a/app/src/main/res/layout/my_text_view.xml
+++ b/app/src/main/res/layout/my_text_view.xml
@@ -20,6 +20,7 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="6dp" />
+        android:layout_marginEnd="6dp"
+        android:text="edit" />
 
 </RelativeLayout>
